[metadata]
name = restk40t
version = 0.0.1
description = MeerK40t web frontend using Flask
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Utilities
keywords = lasercutter, laser, vector, parser
author = Jacob Schmidt
author_email = tiger12506@gmail.com
url = https://github.com/tiger12506/restk40t
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

[options.entry_points]
meerk40t.plugins = Restk40t = restk40t.main:plugin
